EARTH-000: Fix hero banner alignment.

--- a/modules/stanford_news_earth_matters/scss/stanford_news_earth_matters.scss
+++ b/modules/stanford_news_earth_matters/scss/stanford_news_earth_matters.scss
@@ -1,3 +1,18 @@
+@charset 'UTF-8';
+
+// Grab our settings.
+@import 'decanter/core/utilities/decanter-utilities';
+
+/// Header MD Min
+$header-md-min: 860px;
+
+/// Component Header
+$header-md: (
+ columns: 12,
+ gutter: 30px,
+ media: $header-md-min,
+);
+
 .section-earth-matters {
 
   .js-form-type-select {
@@ -58,7 +73,13 @@
   }
 
   #hero-banner {
-    margin-top: -122px;
+    margin-top: -120px;
+  }
+
+  @include grid-media($header-md) {
+    #hero-banner {
+      margin-top: -126px;
+    }
   }
 
   .hero-banner__footer {
